--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Card from '../components/Card.astro';
 			<Card
 				href="https://astro.build/chat/"
 				title="Chat"
-				body="Come say hi to our amazing Discord community. ❤️"
+				body="哇哈哈哈哈哈哈哈哈哈"
 			/>
 		</ul>
 	</main>
