--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,28 +8,28 @@ import Card from '../components/Card.astro';
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			Check out the <code>src/pages</code> directory to get started.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			<strong>Code Challenge:</strong> Tweak the "这只是一个尝试.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				body="随便套的一个模板."
 			/>
 			<Card
 				href="https://astro.build/integrations/"
 				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				body="跳转到什么我也不知道."
 			/>
 			<Card
 				href="https://astro.build/themes/"
 				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				body="只是为了测试一下能不能用."
 			/>
 			<Card
 				href="https://astro.build/chat/"
 				title="Chat"
-				body="Come say hi to our amazing Discord community. ❤️"
+				body="哇哈哈哈哈哈哈"
 			/>
 		</ul>
 	</main>
